# llm-101

./: .gitattributes  .gitignore  .gitmodules  README.md  generation.py  inference.py  pretrain.py  pyproject.toml  requirements.txt  tokenizer.py  trainer.py
data/: shakespeare.txt  庆余年.txt
