[tool.poetry]
name = "llm-101"
version = "0.1.0"
description = ""
authors = ["He Fei <droxer.he@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.2"
tokenizers=">=0.19,<0.20"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
